--- a/02_importomics.ipynb
+++ b/02_importomics.ipynb
@@ -2193,7 +2193,12 @@
    "source": [
     "import re\n",
     "\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "matplotlib.rcParams[\"pdf.fonttype\"] = 42\n",
+    "matplotlib.rcParams[\"ps.fonttype\"] = 42\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
